--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(klassikaline)">
 <!ENTITY Ctr_tabminheight	"Kõrgus:">
 <!ENTITY Ctr_tabheightinfo	"Madalad kõrguse väärtused põhjustavad maksimeeritud režiimis vigu!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"Klahvikombinatsiooniga Ctrl+Tab näita kaartide eelvaateid">
 <!ENTITY Ctr_tabmaxwidth	"Suurim laius:">
 <!ENTITY Ctr_tabminwidth	"Vähim laius:">
 <!ENTITY Ctr_tabwidthinfo	"Kaartide laiust kontrollib TabMixPlus">
@@ -111,10 +111,10 @@
 <!ENTITY Ctr_appbutonclab2	"Lisa nimi või jäta tühjaks">
 
 <!ENTITY Ctr_ui				"Kasutajaliides: üldised sätted">
-<!ENTITY Ctr_nbiconsize0	"Aadressiriba atribuut 'iconsize'">
-<!ENTITY Ctr_smallnavbut	"Väiksed nupud aadressiribal">
+<!ENTITY Ctr_nbiconsize0	"Asukohariba atribuut 'iconsize'">
+<!ENTITY Ctr_smallnavbut	"Väiksed nupud asukoharibal">
 <!ENTITY Ctr_backforward	"Liigutatavad tagasi-edasi nupud">
-<!ENTITY Ctr_nbcompact		"Vähenda aadressiriba kõrgust">
+<!ENTITY Ctr_nbcompact		"Vähenda asukohariba kõrgust">
 <!ENTITY Ctr_hide_bf_popup	"Hiirega klõpsates peida nupu ajaloo hüpikmenüü">
 <!ENTITY Ctr_bf_space		"Vähenda nuppudevahelist tühimikku (kui võimalik)">
 <!ENTITY Ctr_noconicons		"Lehe kontekstimenüü: asenda ikoonid tekstiga (tagasi, edasi...)">
@@ -150,9 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Suured ikoonid">
 <!ENTITY Ctr_nbisizedelay0	"Täitmise viivitus brauseri käivitumisel">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekund)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
-<!ENTITY Ctr_findbarpos		"Otsinguriba asukoht">
+<!ENTITY Ctr_findbar		"Leidmisriba">
+<!ENTITY Ctr_findbar_hws	"Lehte kerides sulge leidmisriba">
+<!ENTITY Ctr_findbarpos		"Leidmisriba asukoht">
 <!ENTITY Ctr_findbar_def	"All (vaikimisi)">
 <!ENTITY Ctr_findbar_top	"Üleval">
 <!ENTITY Ctr_findbar_topa	"Üleval (alternatiivne sisu järjekord)">
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Väike rippmenüü avamise nupp">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"'Rohkem teavet' leht: alternatiivne järjestus">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"Alati näita kategooriat 'Hiljutised uuendused'">
 <!ENTITY Ctr_alt_addonsm	"Alternatiivne välimus">
 <!ENTITY Ctr_am_nowarning	"Laienduste loendid: peida hoiatused">
 <!ENTITY Ctr_am_compact		"Laienduste loendid: kompaktne vaade">
@@ -192,18 +192,18 @@
 <!ENTITY Ctr_hiderecentbm	"Järjehoidjate hüpik: peida viimati lisatud järjehoidjad">
 <!ENTITY Ctr_hideeditbm		"Järjehoidjate täht: peida hüpik (kui leht pole järjehoidjates)">
 <!ENTITY Ctr_oldplacesbut	"Järjehoidjate kirjed ja kaustad tööriistaribal: vana välimus">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_dl_pm_drop		"Allalaadimiste nupu paneel: näita rippmenüü avamise nuppu">
 <!ENTITY Ctr_bmbutpanelm	"Menüühüpik: paneelimenüü välimus">
 <!ENTITY Ctr_bmbunsortbm	"Menüühüpik: alammenüü 'Muud järjehoidjad'">
 <!ENTITY Ctr_bmbunsortbm2	"Menüü järjehoidjate kohal">
 <!ENTITY Ctr_bmbviewbmsb	"Menüühüpik: näita kirjet 'Kuva järjehoidjate külgriba'">
 <!ENTITY Ctr_bmbviewbmtb	"Menüühüpik: näita kirjet 'Kuva järjehoidjariba'">
 <!ENTITY Ctr_bmbnounsort	"Menüühüpik: peida kirje 'Muud järjehoidjad'">
-<!ENTITY Ctr_bmbutnotext	"Peida järjehoidjate ribal sildid">
+<!ENTITY Ctr_bmbutnotext	"Peida järjehoidjaribal sildid">
 <!ENTITY Ctr_skipprintpr	"Printimise nupp: jäta vahele printimise eelvaade">
 <!ENTITY Ctr_tbconmenu		"Tööriistariba kontekstimenüü: peida kirjed 'liiguta menüüsse', 'eemalda tööriistamenüült', 'laadi uuesti/lisa järjehoidjatesse kõik kaardid' ja 'võta kaardi sulgemine tagasi'">
 <!ENTITY Ctr_noresizerxp	"Peida suurusemuutja (Windows XP)">
-<!ENTITY Ctr_extraurlkeycb	"Ava lisa-aadressiriba (Cmd/Ctrl+">
+<!ENTITY Ctr_extraurlkeycb	"Ava lisa-asukohariba (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Paneelimenüü hüpik: peida nuppude tekstid">
 <!ENTITY Ctr_menupopupscr	"Menüühüpikud: näita kerimisnoolte asemel kerimisribasid">
 <!ENTITY Ctr_closegeneral	"Üldised sulgemise ikoonid">
@@ -242,10 +242,10 @@
 <!ENTITY Ctr_italic			"Kaldkiri">
 <!ENTITY Ctr_underlined		"Allajoonitud">
 <!ENTITY Ctr_notabhov		"Valitud sätted tühistavad 'osutatud' sätted">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"Vähenda kaardi nähtavust">
 <!ENTITY Ctr_tabc_act_tb	"Tööriistaribade taustavärv">
 
-<!ENTITY Ctr_urlbar			"Aadressiriba">
+<!ENTITY Ctr_urlbar			"Asukohariba">
 <!ENTITY Ctr_starinurl		"Tähe-nupp">
 <!ENTITY Ctr_starinurlinfo	"Järjehoidjate menüü vaikimisi nupp peidetakse">
 <!ENTITY Ctr_feedinurl		"RSS-voo nupp">
@@ -258,7 +258,7 @@
 <!ENTITY Ctr_altreaderico	"Alternatiivsed 'Lugemisvaate' ikoonid">
 <!ENTITY Ctr_hideurlzoom	"Peida suurenduse nupp (kui on)">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
-<!ENTITY Ctr_locsearchbw10	"Vähenda aadressiriba ja otsinguriba kõrgust (katsejärgus)">
+<!ENTITY Ctr_locsearchbw10	"Vähenda asukohariba ja otsinguriba kõrgust (katsejärgus)">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
 <!ENTITY Ctr_ib_nohovcolor	"Hiirekursoriga ikooni peale minnes ära näita halli taustavärvi">
 <!ENTITY Ctr_ib_graycolor	"Hall värvus tundmatu identiteedi ja 'about:'-lehtede korral">
@@ -274,7 +274,7 @@
 <!ENTITY Ctr_padlock_mod	"kaasaegne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;i' ikoon kehtivate 'about'-lehtede jaoks">
 <!ENTITY Ctr_icopageinfo	"Lehe/gloobuse/'i'-ikoon: nendel klõpsamine avab akna 'veebilehe teave'">
-<!ENTITY Ctr_lbsbsize		"Aadressiriba ja otsinguriba kohandatud laius">
+<!ENTITY Ctr_lbsbsize		"Asukohariba ja otsinguriba kohandatud laius">
 <!ENTITY Ctr_searchbar		"Otsinguriba">
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
@@ -286,7 +286,7 @@
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
 <!ENTITY Ctr_cresultshcb	"Kõrguse kohandatud piirang: ">
 <!ENTITY Ctr_lbsugres		"Tulemuste arv">
-<!ENTITY Ctr_lbsbradius		"Aadressiriba ja otsinguriba piirjoonte kohandatud ümarus">
+<!ENTITY Ctr_lbsbradius		"Asukohariba ja otsinguriba piirjoonte kohandatud ümarus">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
@@ -297,8 +297,8 @@
 <!ENTITY Ctr_invicons		"Pöördvärvid">
 <!ENTITY Ctr_menubar		"Menüüriba">
 <!ENTITY Ctr_tabstoolbar	"Kaartide riba">
-<!ENTITY Ctr_navbar			"Aadressiriba">
-<!ENTITY Ctr_bookbar		"Järjehoidjate riba">
+<!ENTITY Ctr_navbar			"Asukohariba">
+<!ENTITY Ctr_bookbar		"Järjehoidjariba">
 <!ENTITY Ctr_notoolbar		"Peidetud (ära näita menüükirjeid)">
 
 <!ENTITY Ctr_mbarforceleft	"Esimene element">
@@ -341,7 +341,7 @@
 <!ENTITY Ctr_nonavtbborder	"Ülemised tööriistaribad: eemalda tööriistariba piirjooned">
 <!ENTITY Ctr_hidesbclose	"Külgribad: peida sulgemise nupp">
 <!ENTITY Ctr_notextshadow	"Tööriistaribad: peida tööriistariba teksti ja kaardi teksti vari">
-<!ENTITY Ctr_chevronfix		"Aadressiriba: peida topeltnool ('Rohkem tööriistu') tööriistariba lõpus">
+<!ENTITY Ctr_chevronfix		"Asukohariba: peida topeltnool ('Rohkem tööriistu') tööriistariba lõpus">
 <!ENTITY Ctr_tbsep_winc		"Ülemised tööriistaribad: lisa-tööriistariba eraldajad">
 
 <!ENTITY Ctr_closeabarbut	"Lisade riba: peida sulgemise nupp">
@@ -380,7 +380,7 @@
 <!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab otsinguribal esiletõstmise võimalused.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
 <!ENTITY Ctr_e_oneoffsearch	"Otsimootorite valik automaatlõpetuse hüpikus">
-<!ENTITY Ctr_fx51OOSeach	"Sellelt eelistuselt märke eemaldamine eemaldab aadressiriba automaatlõpetuse hüpikust otsimootorite valiku.">
+<!ENTITY Ctr_fx51OOSeach	"Sellelt eelistuselt märke eemaldamine eemaldab asukohariba automaatlõpetuse hüpikust otsimootorite valiku.">
 
 
 <!ENTITY Ctr_pw_settings	"Sätted">
