--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Einstellung hat Auswirkung auf alle Leisten in der 'Slim'-Darstellung der Erweiterung 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Obere Randlinie anzeigen">
 <!ENTITY Ctr_nonavtbborder	"Obere Leisten: Leistenrand nicht anzeigen">
+<!ENTITY Ctr_toptb_oldpad	"Obere Leisten: Alte Abstände rechts und links wiederherstellen">
 <!ENTITY Ctr_hidesbclose	"Seitenleisten: 'Schließen'-Schaltfläche verstecken">
 <!ENTITY Ctr_notextshadow	"Leisten: Textschatten nicht anzeigen">
 <!ENTITY Ctr_chevronfix		"Navigations-Symbolleiste: Doppelpfeil am Ende der Leiste verstecken">
