--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Toutes les barres d'outils en mode « Interface Réduite » du module « Beyond Australis » sont affectées.">
 <!ENTITY Ctr_nonavborder	"Ajouter une bordure supérieure à la barre d'outils">
 <!ENTITY Ctr_nonavtbborder	"Barres d'outils supérieures : enlever les bordures">
+<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
 <!ENTITY Ctr_hidesbclose	"Barres latérales : masquer le bouton de fermeture">
 <!ENTITY Ctr_notextshadow	"Masquer l'ombre du texte de barre d'outils ainsi que l'ombre du texte des onglets">
 <!ENTITY Ctr_chevronfix		"Barre de navigation : masquer le bouton « Plus d'outils »">
