--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"应用到“Beyond Australis”附加组件的 Slim Chrome 中的所有工具栏。">
 <!ENTITY Ctr_nonavborder	"书签工具栏: 添加上边框">
 <!ENTITY Ctr_nonavtbborder	"顶部工具栏: 移除工具栏边框">
+<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right paddings">
 <!ENTITY Ctr_hidesbclose	"侧边栏: 隐藏侧边栏关闭按钮">
 <!ENTITY Ctr_notextshadow	"工具栏: 隐藏工具栏文本与标签页文本的阴影">
 <!ENTITY Ctr_chevronfix		"导航工具栏: 隐藏工具栏尾部的双箭头 ('更多工具')">
