--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Budou ovlivněna rozšíření 'Beyond Australis' a 'Slim Chrome'.">
 <!ENTITY Ctr_nonavborder	"Lišta záložek: přidat horní okraj lišty">
 <!ENTITY Ctr_nonavtbborder	"Vrchní lišty: odstranit okraje lišt">
+<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
 <!ENTITY Ctr_hidesbclose	"Postranní panely: skrýt zavírací tlačítka">
 <!ENTITY Ctr_notextshadow	"Lišty: zrušit stínování textu lišty a panelu">
 <!ENTITY Ctr_chevronfix		"Navigační lišta: skrýt dvojšipku ('Další nástroje') na konci lišty">
