--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Alle værktøjslinjer 'Beyond Australis' i tilføjelsens 'Slim Chrome' påvirkes.">
 <!ENTITY Ctr_nonavborder	"Tilføj kant for oven på værktøjslinjen">
 <!ENTITY Ctr_nonavtbborder	"Øverste værktøjslinjer: fjern kanten på værktøjsline">
+<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
 <!ENTITY Ctr_hidesbclose	"Sidepaneler: skjul luk-knappen på sidepanel">
 <!ENTITY Ctr_notextshadow	"Værktøjslinjer: skjul skygge for tekst på værktøjslinje og faneblade">
 <!ENTITY Ctr_chevronfix		"Navigationslinje: skjul dobbelt-pil på værktøjslinjernes slutning">
