--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Nastajenje ma wustatkowanje na wšykne rědki w pśedstajenju Slim dodanka 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Górny ramik symbolowej rědce pśidaś">
 <!ENTITY Ctr_nonavtbborder	"Górne symbolowe rědki: Ramiki symboloweje rědki wótpóraś">
+<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
 <!ENTITY Ctr_hidesbclose	"Bocnice: Tłocašk 'Zacyniś' schowaś">
 <!ENTITY Ctr_notextshadow	"Symbolowe rědki: Seń za tekst symboloweje rědki a rejtarki schowaś">
 <!ENTITY Ctr_chevronfix		"Nawigaciska rědka: Dwójnu šypku ('Dalšne rědy') na kóńcu rědki schowaś">
