--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Mõjutab kõiki laienduse 'Beyond Australis' Slim Chrome'i tööriistaribasid.">
 <!ENTITY Ctr_nonavborder	"Lisa ribale ülemine piirjoon">
 <!ENTITY Ctr_nonavtbborder	"Ülemised tööriistaribad: eemalda tööriistariba piirjooned">
+<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
 <!ENTITY Ctr_hidesbclose	"Külgribad: peida sulgemise nupp">
 <!ENTITY Ctr_notextshadow	"Tööriistaribad: peida tööriistariba teksti ja kaardi teksti vari">
 <!ENTITY Ctr_chevronfix		"Asukohariba: peida topeltnool ('Rohkem tööriistu') tööriistariba lõpus">
