--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Beyond Australis アドオンによるすべての Slim Chrome ツールバーが影響を受けます。">
 <!ENTITY Ctr_nonavborder	"上に枠線を加える">
 <!ENTITY Ctr_nonavtbborder	"枠線を取り除く">
+<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
 <!ENTITY Ctr_hidesbclose	"サイドバー: 閉じるボタンを隠す">
 <!ENTITY Ctr_notextshadow	"ツールバーとタブのテキストの影を隠す">
 <!ENTITY Ctr_chevronfix		"ナビゲーションツールバー: ツールバーの後ろの“その他のツール”の矢印を消す">
