--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -339,6 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Todas as barras de ferramentas em 'Beyond australis' no slim chrome dos complementos, são afetadas.">
 <!ENTITY Ctr_nonavborder	"Barra de favoritos: adicionar borda no topo da barra">
 <!ENTITY Ctr_nonavtbborder	"Barras superiores: remover bordas da barra">
+<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
 <!ENTITY Ctr_hidesbclose	"Barras laterais: ocultar o botão fechar da barra lateral">
 <!ENTITY Ctr_notextshadow	"Barras de ferramentas: ocultar sombra para texto da barra e da aba">
 <!ENTITY Ctr_chevronfix		"Barra de ferramentas navegação: ocultar a seta dupla ('Mais ferramentas') no final das barras de ferramentas">
