--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(clásico)">
 <!ENTITY Ctr_tabminheight	"Altura:">
 <!ENTITY Ctr_tabheightinfo	"¡Valores de altura bajos causarán problemas en modo maximizado!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"Previsualizar pestañas usando 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Ancho-máximo:">
 <!ENTITY Ctr_tabminwidth	"Ancho-mínimo:">
 <!ENTITY Ctr_tabwidthinfo	"La anchura de la pestaña está controlada por TabMixPlus">
@@ -150,8 +150,8 @@
 <!ENTITY Ctr_navlargeicons	"Iconos grandes">
 <!ENTITY Ctr_nbisizedelay0	"Retardo de la activación al inicio">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 seg)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbar		"Barra de herramientas de búsqueda">
+<!ENTITY Ctr_findbar_hws	"Cerrar la barra de herramientas de búsqueda al desplazar la página">
 <!ENTITY Ctr_findbarpos		"Posición en la ventana de la barra de herramientas de búsqueda">
 <!ENTITY Ctr_findbar_def	"Abajo (predeterminada)">
 <!ENTITY Ctr_findbar_top	"Arriba">
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Flecha de despliegue pequeña">
 <!ENTITY Ctr_addonmanager	"Administrador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'más información': Apariencia alternativa">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"Mostrar siempre la categoría 'Actualizaciones recientes'">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
 <!ENTITY Ctr_am_nowarning	"Ocultar advertencias en las listas de complementos">
 <!ENTITY Ctr_am_compact		"Vista compacta de las listas">
@@ -192,7 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Menú emergente de Marcadores: Ocultar marcadores añadidos recientemente">
 <!ENTITY Ctr_hideeditbm		"Estrella de marcadores: Ocultar panel emergente (si la página no está en marcadores)">
 <!ENTITY Ctr_oldplacesbut	"Elementos y carpetas de Marcadores en la barra de herramientas: Apariencia antigua">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_dl_pm_drop		"Panel de los botones 'Descargas': Mostrar flecha de despliegue de menú ">
 <!ENTITY Ctr_bmbutpanelm	"Estilo de panel para el menú emergente ">
 <!ENTITY Ctr_bmbunsortbm	"Mostrar submenú 'Marcadores no ordenados'">
 <!ENTITY Ctr_bmbunsortbm2	"Menú por encima de los marcadores">
@@ -242,7 +242,7 @@
 <!ENTITY Ctr_italic			"Cursiva">
 <!ENTITY Ctr_underlined		"Subrayadas">
 <!ENTITY Ctr_notabhov		"Las configuraciones habilitadas se imponen a las de pestaña 'señalada'">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"Reducir visibilidad de la pestaña">
 <!ENTITY Ctr_tabc_act_tb	"Color de fondo en barras de herramientas">
 
 <!ENTITY Ctr_urlbar			"Barra de direcciones">
@@ -339,7 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Afecta a todas las barras con 'Chrome esbelto' del complemento 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Añadir borde superior a la barra">
 <!ENTITY Ctr_nonavtbborder	"Barras superiores: Eliminar bordes de barra de herramientas">
-<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
+<!ENTITY Ctr_toptb_oldpad	"Barras superiores: Antiguos ahuecados a izquierda y derecha">
 <!ENTITY Ctr_hidesbclose	"Ocultar botón cerrar de las barras laterales">
 <!ENTITY Ctr_notextshadow	"Ocultar sombreado para texto de barra de herramientas y texto de pestaña">
 <!ENTITY Ctr_chevronfix		"Barra de navegación: Ocultar botón de doble flecha ('Más herramientas') al final de las barras">
@@ -377,11 +377,11 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icono de reproducción de audio en las pestañas">
 <!ENTITY Ctr_e_containertab	"Pestañas contenedor">
-<!ENTITY Ctr_e_findbarhl	"Resaltado de la barra de herramientas de búsqueda.">
-<!ENTITY Ctr_fx50findbarhl	"Desmarcar estos ajustes suprime las funciones de 'resaltado' de la barra de herramientas de búsqueda.">
+<!ENTITY Ctr_e_findbarhl	"Función de resaltado de la barra de herramientas de búsqueda.">
+<!ENTITY Ctr_fx50findbarhl	"Desmarcarlas deshabilita el resaltado de [estilo modal (con atenuación)] / [todas las coincidencias]">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Selección de búsqueda de los menús de autocompletado">
-<!ENTITY Ctr_fx51OOSeach	"Desmarcar esta preferencia elimina la selección de búsqueda del menú de autocompletado de las barras de direcciones.">
+<!ENTITY Ctr_e_oneoffsearch	"Selección de búsqueda en menús emergentes de autocompletado">
+<!ENTITY Ctr_fx51OOSeach	"Desmarcar esto elimina el selector de búsqueda del menú de autocompletado de las barras de direcciones.">
 
 
 <!ENTITY Ctr_pw_settings	"Configuración">
