--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(κλασικό)">
 <!ENTITY Ctr_tabminheight	"Ύψος:">
 <!ENTITY Ctr_tabheightinfo	"Χαμηλές τιμές ύψους θα προκαλέσουν δυσλειτουργίες σε λειτουργία μεγιστοποίησης!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"Προεπισκόπηση καρτελών με χρήση «Ctrl + Tab»">
 <!ENTITY Ctr_tabmaxwidth	"Μέγιστο εύρος:">
 <!ENTITY Ctr_tabminwidth	"Ελάχιστο εύρος:">
 <!ENTITY Ctr_tabwidthinfo	"Το εύρος καρτελών ελέγχεται από την επέκταση «TabMixPlus»">
@@ -126,7 +126,7 @@
 <!ENTITY Ctr_altoptionswh	"Ύψος:">
 <!ENTITY Ctr_altoptionsi	"Το προσομοιωμένο παράθυρο επιλογών δεν είναι πια παράθυρο διαλόγου, αλλά ένα «παράθυρο περιηγητή» με όλες τις εργαλειοθήκες σε απόκρυψη. Το χαρακτηριστικό «Χρήση τρέχουσας σελίδας» προσθέτει μόνο τις διευθύνσεις URL των ανοιγμένων στο τρέχον παράθυρο σελίδων, που είναι μόνο «about:preferences» σε αυτή την περίπτωση. Το κουμπί εργαλειοθήκης «Επιλογές» αντικαθίσταται από ένα νέο, για να είναι δυνατόν το άνοιγμα επιλογών σε παράθυρο.">
 <!ENTITY Ctr_options_rem	"Απομνημόνευση τελευταία επιλεχθείσας κατηγορίας">
-<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
+<!ENTITY Ctr_aboutpages		"Γενικές «about:» σελίδες: εναλλακτική εμφάνιση">
 <!ENTITY Ctr_svgfilters		"Χρώματα SVG για προεπιλεγμένα εικονίδια κουμπιών εργαλειοθήκης">
 <!ENTITY Ctr_wincontrols	"Μετακινήσιμα στοιχεία ελέγχου παραθύρου σε προβολή πλήρους οθόνης">
 <!ENTITY Ctr_puibuttonsep	"Διαχωριστικό κουμπιού μενού">
@@ -150,8 +150,8 @@
 <!ENTITY Ctr_navlargeicons	"Μεγάλα εικονίδια">
 <!ENTITY Ctr_nbisizedelay0	"καθυστέρηση εφαρμογής κατά την εκκίνηση του περιηγητή">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 δευτερόλεπτο)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbar		"Γραμμή εύρεσης">
+<!ENTITY Ctr_findbar_hws	"Κλείσιμο γραμμής εύρεσης κατά την κύλιση της σελίδας">
 <!ENTITY Ctr_findbarpos		"Θέση γραμμής εύρεσης">
 <!ENTITY Ctr_findbar_def	"Κάτω μέρος (προεπιλογή)">
 <!ENTITY Ctr_findbar_top	"Κορυφή">
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Μικρός δείκτης ανάπτυξης">
 <!ENTITY Ctr_addonmanager	"Διαχειριστής πρόσθετων">
 <!ENTITY Ctr_alt_addonsp	"Σελίδα «Περισσότερα»: εναλλακτική σειρά περιεχομένου">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"Πάντα εμφάνιση της κατηγορίας «Πρόσφατες ενημερώσεις»">
 <!ENTITY Ctr_alt_addonsm	"Εναλλακτική εμφάνιση">
 <!ENTITY Ctr_am_nowarning	"Λίστες πρόσθετων: απόκρυψη προειδοποιήσεων">
 <!ENTITY Ctr_am_compact		"Λίστες πρόσθετων: συμπαγής προβολή">
@@ -191,14 +191,14 @@
 <!ENTITY Ctr_bmbutton		"Κουμπί-μενού σελιδοδεικτών">
 <!ENTITY Ctr_hiderecentbm	"Αναδυόμενο σελιδοδεικτών: απόκρυψη πρόσφατα προστεθέντων σελιδοδεικτών">
 <!ENTITY Ctr_hideeditbm		"Αστέρι σελιδοδεικτών: απόκρυψη αναδυόμενου (αν η σελίδα δεν είναι στους σελιδοδείκτες)">
-<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_oldplacesbut	"Στοιχεία σελιδοδεικτών και φάκελοι σε εργαλειοθήκη: παλιά εμφάνιση">
+<!ENTITY Ctr_dl_pm_drop		"Πινακίδιο κουμπιού λήψεων: εμφάνιση δείκτη ανάπτυξης">
 <!ENTITY Ctr_bmbutpanelm	"Αναδυόμενο: εμφάνιση ως μενού πίνακα">
-<!ENTITY Ctr_bmbunsortbm	"Αναδυόμενο: υπομενού «Αταξινόμητοι σελιδοδείκτες»">
+<!ENTITY Ctr_bmbunsortbm	"Αναδυόμενο: μενού «Άλλοι σελιδοδείκτες»">
 <!ENTITY Ctr_bmbunsortbm2	"Πάνω από τους σελιδοδείκτες">
 <!ENTITY Ctr_bmbviewbmsb	"Αναδυόμενο: εμφάνιση «Προβολή πλευρικής στήλης»">
 <!ENTITY Ctr_bmbviewbmtb	"Αναδυόμενο: εμφάνιση «Προβολή εργαλειοθήκης σελιδοδεικτών»">
-<!ENTITY Ctr_bmbnounsort	"Αναδυόμενο: απόκρυψη «Αταξινόμητοι σελιδοδείκτες»">
+<!ENTITY Ctr_bmbnounsort	"Αναδυόμενο: απόκρυψη μενού «Άλλοι σελιδοδείκτες»">
 <!ENTITY Ctr_bmbutnotext	"Απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
 <!ENTITY Ctr_skipprintpr	"Κουμπί «Εκτύπωση»: παράκαμψη προεπισκόπησης εκτύπωσης">
 <!ENTITY Ctr_tbconmenu		"Μενού περιεχομένου εργαλειοθήκης: Απόκρυψη «Μετακίνηση στο μενού», «Απομάκρυνση από την εργαλειοθήκη», «Ανανέωση όλων των καρτελών», «Όλες οι καρτέλες σε σελιδοδείκτη…» και «Αναίρεση κλεισίματος καρτέλας»">
@@ -218,7 +218,7 @@
 <!ENTITY Ctr_navthrobber2	"Προσθέστε διεύθυνση url ή αφήστε τη γραμμή κενή">
 <!ENTITY Ctr_anewtaburl		"URL σελίδας νέας καρτέλας">
 <!ENTITY Ctr_anewtaburlcb	"Προσαρμοσμένο url σελίδας νέας καρτέλας (προεπιλογή: «about:newtab»)">
-<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpcb	"Προσαρμοσμένο url σελίδας νέας ιδιωτικής καρτέλας (προεπιλογή: «about:privatebrowsing»)">
 
 <!ENTITY Ctr_tab_tf_info1	"Ονόματα χρωμάτων, δεκαεξαδικοί κωδικοί, τιμές rgb(a) και hsl(a) υποστηρίζονται.">
 <!ENTITY Ctr_tab_tf_info2	"Οι εισηγμένες τιμές δεν θα επικυρωθούν!">
@@ -242,7 +242,7 @@
 <!ENTITY Ctr_italic			"Πλάγια γραφή">
 <!ENTITY Ctr_underlined		"Υπογράμμιση">
 <!ENTITY Ctr_notabhov		"Παράκαμψη ρυθμίσεων κατάδειξης από τις ενεργοποιημένες ρυθμίσεις εδώ">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"Μείωση ορατότητας καρτέλας">
 <!ENTITY Ctr_tabc_act_tb	"Χρώμα φόντου σε εργαλειοθήκες">
 
 <!ENTITY Ctr_urlbar			"Γραμμή τοποθεσιών">
@@ -256,8 +256,8 @@
 <!ENTITY Ctr_urlbardropm	"Μετακίνηση του δείκτη ανάπτυξης στην τελευταία δυνατή θέση">
 <!ENTITY Ctr_urlbardropm2	"Να είναι πάντα ορατός ο δείκτης ανάπτυξης">
 <!ENTITY Ctr_altreaderico	"Εναλλακτικά εικονίδια «λειτουργίας ανάγνωσης»">
-<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
-<!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης φραγής αναδυόμενου παραθύρου">
+<!ENTITY Ctr_hideurlzoom	"Απόκρυψη κουμπιού μεγέθυνσης (αν υπάρχει)">
+<!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης κατά τη φραγή αναδυόμενου παραθύρου">
 <!ENTITY Ctr_locsearchbw10	"Μείωση ύψους γραμμών τοποθεσιών και αναζήτησης (πειραματικό)">
 <!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών (πλαίσιο ταυτοποίησης)">
 <!ENTITY Ctr_ib_nohovcolor	"Μη εμφάνιση γκρι χρώματος κατά την κατάδειξη">
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_autocompl_sep	"Εμφάνιση διαχωριστικού μεταξύ αποτελεσμάτων">
 <!ENTITY Ctr_urlbar_uc		"Απενεργοποίηση χαρακτηριστικού ενιαίας αυτόματης συμπλήρωσης">
 <!ENTITY Ctr_lbsugresi		"Απενεργοποίηση ορίου ύψους">
-<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
+<!ENTITY Ctr_cresultshcb	"Προσαρμοσμένο όριο ύψους: ">
 <!ENTITY Ctr_lbsugres		"Αριθμός αποτελεσμάτων">
 <!ENTITY Ctr_lbsbradius		"Προσαρμοσμένη ακτίνα περιγράμματος γραμμών τοποθεσιών και αναζήτησης">
 
@@ -310,7 +310,7 @@
 <!ENTITY Ctr_hidetbwot		"Απόκρυψη εργαλειοθήκης καρτελών με μόνο μία ορατή καρτέλα">
 <!ENTITY Ctr_hidetbwote		"Μείωση καθυστέρησης απόκρυψης κατά την εκκίνηση">
 <!ENTITY Ctr_hidetbwote_i	"Ενδέχεται να προκαλέσει δυσλειτουργίες στην εργαλειοθήκη καρτελών">
-<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
+<!ENTITY Ctr_hidetbwote2	"Αυτόματη προσαρμογή διαστήματος γραμμής τίτλου">
 <!ENTITY Ctr_notabfog		"Απομάκρυνση ομίχλης φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Απομάκρυνση χρώματος φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Μείωση χώρου πάνω από την εργαλειοθήκη (εάν είναι δυνατόν)">
@@ -339,7 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Επηρεάζονται όλες οι εργαλειοθήκες σε λειτουργία «Slim Chrome» της επέκτασης «The Fox, Only Better».">
 <!ENTITY Ctr_nonavborder	"Προσθήκη περιγράμματος κορυφής στην εργαλειοθήκη">
 <!ENTITY Ctr_nonavtbborder	"Εργαλειοθήκες κορυφής: Απομάκρυνση περιγραμμάτων εργαλειοθήκης">
-<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
+<!ENTITY Ctr_toptb_oldpad	"Εργαλειοθήκες κορυφής: παλιό γέμισμα αριστερά και δεξιά">
 <!ENTITY Ctr_hidesbclose	"Πλευρικές στήλες: απόκρυψη κουμπιού κλεισίματος πλευρικής στήλης">
 <!ENTITY Ctr_notextshadow	"Εργαλειοθήκες: απόκρυψη σκιάς κειμένου εργαλειοθηκών και καρτελών">
 <!ENTITY Ctr_chevronfix		"Εργαλειοθήκη πλοήγησης: απόκρυψη διπλού βέλους («Περισσότερα εργαλεία…») στο τέλος της εργαλειοθήκης">
@@ -376,12 +376,12 @@
 <!ENTITY Ctr_e_readermode	"Λειτουργία ανάγνωσης">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Εικονίδιο αναπαραγωγής ήχου σε καρτέλες">
-<!ENTITY Ctr_e_containertab	"«Container Tabs»">
+<!ENTITY Ctr_e_containertab	"Καρτέλeς περιεκτών">
 <!ENTITY Ctr_e_findbarhl	"Επισημάνσεις γραμμής εύρεσης">
 <!ENTITY Ctr_fx50findbarhl	"Αποεπιλέγοντας αυτή την προτίμηση απομακρύνονται οι δυνατότητες επισήμανσης της γραμμής εύρεσης.">
-<!ENTITY Ctr_e_flyweb		"«Flyweb»">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
+<!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_oneoffsearch	"Δυνατότητα επιλογής μηχανής αναζήτησης από αναδυόμενο αυτόματης συμπλήρωσης">
+<!ENTITY Ctr_fx51OOSeach	"Αποεπιλέγοντας αυτή την προτίμηση απομακρύνεται η δυνατότητα επιλογής μηχανής αναζήτησης από το αναδυόμενο αυτόματης συμπλήρωσης της γραμμής τοποθεσιών.">
 
 
 <!ENTITY Ctr_pw_settings	"Ρυθμίσεις">
@@ -408,7 +408,7 @@
 <!ENTITY goCmd.label					"Μετάβαση">
 <!ENTITY Ctr_menu_restart.label			"Επανεκκίνηση">
 <!ENTITY Ctr_restartapp					"Στοιχείο «Επανεκκίνηση» στα μενού κουμπιού &brandShortName; και «Αρχείο»">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_ctrnewinv					"Υπογράμμιση νέων επιλογών για την τρέχουσα έκδοση του &brandShortName;">
 
 <!ENTITY Ctr_openInCurrentTab			"Άνοιγμα καταχωρίσεων στην τρέχουσα καρτέλα">
 <!ENTITY Ctr_openInNewTab				"Άνοιγμα καταχωρίσεων σε νέα καρτέλα">
