--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"小さなドロップマーカー">
 <!ENTITY Ctr_addonmanager	"アドオンマネージャ">
 <!ENTITY Ctr_alt_addonsp	"詳細情報: 順序を変える">
-<!ENTITY Ctr_am_showrecup	"最近の更新を常に表示する">
+<!ENTITY Ctr_am_showrecup	"最近の更新カテゴリを常に表示する">
 <!ENTITY Ctr_alt_addonsm	"替わりの外観で置き換える">
 <!ENTITY Ctr_am_nowarning	"アドオンリスト: 警告を隠す">
 <!ENTITY Ctr_am_compact		"アドオンリスト: コンパクトビュー">
@@ -339,7 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Beyond Australis アドオンによるすべての Slim Chrome ツールバーが影響を受けます。">
 <!ENTITY Ctr_nonavborder	"上に枠線を加える">
 <!ENTITY Ctr_nonavtbborder	"枠線を取り除く">
-<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
+<!ENTITY Ctr_toptb_oldpad	"トップツールバー: 旧バージョンの左右の余白">
 <!ENTITY Ctr_hidesbclose	"サイドバー: 閉じるボタンを隠す">
 <!ENTITY Ctr_notextshadow	"ツールバーとタブのテキストの影を隠す">
 <!ENTITY Ctr_chevronfix		"ナビゲーションツールバー: ツールバーの後ろの“その他のツール”の矢印を消す">
