--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -310,7 +310,7 @@
 <!ENTITY Ctr_hidetbwot		"当只有一个标签页时隐藏标签页栏">
 <!ENTITY Ctr_hidetbwote		"启动时减少隐藏延迟">
 <!ENTITY Ctr_hidetbwote_i	"可能会导致标签页工具栏闪烁">
-<!ENTITY Ctr_hidetbwote2	"自动调整标题栏空白">
+<!ENTITY Ctr_hidetbwote2	"自动调整标题栏留白">
 <!ENTITY Ctr_notabfog		"移除背景模糊 (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"移除背景颜色 (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"减少工具栏上方空间 (如果可以)">
@@ -339,7 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"应用到“Beyond Australis”附加组件的 Slim Chrome 中的所有工具栏。">
 <!ENTITY Ctr_nonavborder	"书签工具栏: 添加上边框">
 <!ENTITY Ctr_nonavtbborder	"顶部工具栏: 移除工具栏边框">
-<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right paddings">
+<!ENTITY Ctr_toptb_oldpad	"顶部工具栏: 旧式左右留白">
 <!ENTITY Ctr_hidesbclose	"侧边栏: 隐藏侧边栏关闭按钮">
 <!ENTITY Ctr_notextshadow	"工具栏: 隐藏工具栏文本与标签页文本的阴影">
 <!ENTITY Ctr_chevronfix		"导航工具栏: 隐藏工具栏尾部的双箭头 ('更多工具')">
