--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(klasiski)">
 <!ENTITY Ctr_tabminheight	"Wysokosć:">
 <!ENTITY Ctr_tabheightinfo	"Niske hódnoty zwobraznjenske zmylki w maksiměrowanym napohledźe zawinuja!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"Přehlad rajtarkow z pomocu 'Strg + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Maksimalna šěrokosć:">
 <!ENTITY Ctr_tabminwidth	"Minimalna šěrokosć:">
 <!ENTITY Ctr_tabwidthinfo	"Minimalna a maksimalna šěrokosć rajtarkow so přez TabMixPlus kontrolujetej">
@@ -150,10 +150,10 @@
 <!ENTITY Ctr_navlargeicons	"Wulke symbole">
 <!ENTITY Ctr_nbisizedelay0	"Komdźenje wuwjedźenja w ms">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
-<!ENTITY Ctr_findbarpos		"Pytanska lajsta">
-<!ENTITY Ctr_findbar_def	"Standardna pozicija">
+<!ENTITY Ctr_findbar		"Pytanska lajsta">
+<!ENTITY Ctr_findbar_hws	"Pytanske polo začinić, hdyž so strona kula">
+<!ENTITY Ctr_findbarpos		"Pozicijia pytanskeje lajsty">
+<!ENTITY Ctr_findbar_def	"Deleka (standard)">
 <!ENTITY Ctr_findbar_top	"Horjeka">
 <!ENTITY Ctr_findbar_topa	"Horjeka (alternatiwny)">
 <!ENTITY Ctr_findbar_bota	"Deleka (alternatiwny)">
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Małe wuběranske tłóčatko">
 <!ENTITY Ctr_addonmanager	"Zrjadowak přidatkow">
 <!ENTITY Ctr_alt_addonsp	"Strona 'wjace info': Alternatiwny porjad">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"Kategoriju 'Najnowše aktualizacije' přeco pokazać">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny napohlad">
 <!ENTITY Ctr_am_nowarning	"Lisćiny přidatkow: Warnowanja schować">
 <!ENTITY Ctr_am_compact		"Lisćiny přidatkow: Kompaktny napohlad">
@@ -192,7 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Wuskakowace wokno zapołožkow: Njedawo přidate zapołožki schować">
 <!ENTITY Ctr_hideeditbm		"Hwěžka zapołožkow: Wuskakowace wokno schować (jeli strona jako zapołožka składowana njeje)">
 <!ENTITY Ctr_oldplacesbut	"Zapiski a rjadowaki zapołožkow na symbolowej lajsće: stary napohlad">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_dl_pm_drop		"Wobłuk sćehnjenskich tłóčatkow: tłóčatko šipkoweho kónčka pokazać">
 <!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: Napohlad wuskakowaceho menija">
 <!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: Meni Druhe zapołožki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
@@ -242,7 +242,7 @@
 <!ENTITY Ctr_italic			"Kursiwny">
 <!ENTITY Ctr_underlined		"Podšmórnjeny">
 <!ENTITY Ctr_notabhov		"Zmóžnjene nastajenja přepisuja 'hover-nastajenja'">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"Widźomnosć rajtarkow redukować">
 <!ENTITY Ctr_tabc_act_tb	"Pozadkowa barba na symbolowych lajstach">
 
 <!ENTITY Ctr_urlbar			"Adresowe polo">
@@ -339,7 +339,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Wuskutkuje so na wšě lajsty powjercha Slim přidatka 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Horni ramik symbolowej lajsće přidać">
 <!ENTITY Ctr_nonavtbborder	"Hornje symbolowe lajsty: Ramiki symboloweje lajsty wotstronić">
-<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
+<!ENTITY Ctr_toptb_oldpad	"Hornje symbolowe lajsty: stary lěwy a prawy wotstawk wobnowić">
 <!ENTITY Ctr_hidesbclose	"Bóčnicy: Tłóčatko Začinić schować">
 <!ENTITY Ctr_notextshadow	"Symbolowe lajsty: Sćin za tekst symboloweje lajsty a rajtarki schować">
 <!ENTITY Ctr_chevronfix		"Nawigaciska lajsta: Dwójny šipk ('Dalše nastroje') na kóncu symboloweje lajsty schować">
