--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"㍉秒 (1 秒 ＝ 1000 ㍉秒)">
 <!ENTITY Ctr_findbar		"検索バー">
 <!ENTITY Ctr_findbar_hws	"ページをスクロールしたら検索バーを閉じる">
+<!ENTITY Ctr_findbar_width	"Findboxes width">
 <!ENTITY Ctr_findbarpos		"検索バー">
 <!ENTITY Ctr_findbar_def	"デフォルト位置">
 <!ENTITY Ctr_findbar_top	"上に表示">
