--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"msegs. (1000 msegs. = 1 seg.)">
 <!ENTITY Ctr_findbar		"Findbar">
 <!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbar_width	"Findboxes width">
 <!ENTITY Ctr_findbarpos		"Barra de pesquisas">
 <!ENTITY Ctr_findbar_def	"Posição padrão">
 <!ENTITY Ctr_findbar_top	"Posição no topo">
