--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"мс (1000 мс = 1 сек)">
 <!ENTITY Ctr_findbar		"Панель поиска">
 <!ENTITY Ctr_findbar_hws	"Закрывать панель поиска при прокрутке страницы">
+<!ENTITY Ctr_findbar_width	"Findboxes width">
 <!ENTITY Ctr_findbarpos		"Положение панели поиска">
 <!ENTITY Ctr_findbar_def	"внизу (по умолчанию)">
 <!ENTITY Ctr_findbar_top	"вверху">
