--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 δευτερόλεπτο)">
 <!ENTITY Ctr_findbar		"Γραμμή εύρεσης">
 <!ENTITY Ctr_findbar_hws	"Κλείσιμο γραμμής εύρεσης κατά την κύλιση της σελίδας">
+<!ENTITY Ctr_findbar_width	"Findboxes width">
 <!ENTITY Ctr_findbarpos		"Θέση γραμμής εύρεσης">
 <!ENTITY Ctr_findbar_def	"Κάτω μέρος (προεπιλογή)">
 <!ENTITY Ctr_findbar_top	"Κορυφή">
