--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -152,6 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytanska lajsta">
 <!ENTITY Ctr_findbar_hws	"Pytanske polo začinić, hdyž so strona kula">
+<!ENTITY Ctr_findbar_width	"Findboxes width">
 <!ENTITY Ctr_findbarpos		"Pozicijia pytanskeje lajsty">
 <!ENTITY Ctr_findbar_def	"Deleka (standard)">
 <!ENTITY Ctr_findbar_top	"Horjeka">
