--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s)">
 <!ENTITY Ctr_findbar		"Pasek wyszukiwania">
 <!ENTITY Ctr_findbar_hws	"Zamknij pasek wyszukiwania przy przewijaniu strony">
-<!ENTITY Ctr_findbar_width	"Findboxes width">
+<!ENTITY Ctr_findbar_width	"Szerokość pola wyszukiwania">
 <!ENTITY Ctr_findbarpos		"Pozycja paska wyszukiwania">
 <!ENTITY Ctr_findbar_def	"Dolna (domyślna)">
 <!ENTITY Ctr_findbar_top	"Górna">
