Option to hide page title in address bar popup This adds an option to hide the page title (and the following separator) in the richresult popup results of the address bar. This currently only works with the non-alternative address bar popup. Still needs localization for languages other than english and german.

--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -283,6 +283,7 @@
 <!ENTITY Ctr_autocompl_hl	"Highlighting of text hits">
 <!ENTITY Ctr_autocompl_rhl	"Aero colors for highlighted results">
 <!ENTITY Ctr_autocompl_sep	"Show separator between results">
+<!ENTITY Ctr_autocompl_title	"Hide page title">
 <!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_cresultshcb	"Custom height limit: ">
