--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocompl_it	"Απομάκρυνση στοιχείων «Αναζήτηση με ...» και «Επίσκεψη» (εάν υπάρχουν)">
 <!ENTITY Ctr_autocompl_hl	"Επισήμανση ευρημάτων κειμένου">
 <!ENTITY Ctr_autocompl_rhl	"Χρώματα «Aero» για επισημασμένα αποτελέσματα">
+<!ENTITY Ctr_autocompl_not	"Hide page title">
 <!ENTITY Ctr_autocompl_sep	"Εμφάνιση διαχωριστικού μεταξύ αποτελεσμάτων">
 <!ENTITY Ctr_urlbar_uc		"Απενεργοποίηση χαρακτηριστικού ενιαίας αυτόματης συμπλήρωσης">
 <!ENTITY Ctr_lbsugresi		"Απενεργοποίηση ορίου ύψους">
