--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -283,6 +283,7 @@
 <!ENTITY Ctr_autocompl_it	"Eliminar los elementos 'Buscar con...' y 'Visitar' (si están presentes)">
 <!ENTITY Ctr_autocompl_hl	"Marcado de coincidencias">
 <!ENTITY Ctr_autocompl_rhl	"Colores Aero para resultados destacados">
+<!ENTITY Ctr_autocompl_not	"Hide page title">
 <!ENTITY Ctr_autocompl_sep	"Mostrar separador entre resultados">
 <!ENTITY Ctr_lbsugresi		"Deshabilitar límite de altura">
 <!ENTITY Ctr_cresultshcb	"Límite de altura personalizado: ">
