--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocompl_it	"Zapiski 'Pytać z...' and 'Wopytać' wotstronić (jeli eksistujetej)">
 <!ENTITY Ctr_autocompl_hl	"Wuzběhnjenje tekstowych wotpowědnikow">
 <!ENTITY Ctr_autocompl_rhl	"Aero-barby za wuzběhnjene wuslědki">
+<!ENTITY Ctr_autocompl_not	"Hide page title">
 <!ENTITY Ctr_autocompl_sep	"Dźělatko mjez wuslědkami pokazać">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić">
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
