--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocompl_it	"Remover itens 'Pesquisar com...' e 'Visitar' itens (se presente)">
 <!ENTITY Ctr_autocompl_hl	"Realçar ocorrências do texto">
 <!ENTITY Ctr_autocompl_rhl	"Cores Aero para resultados realçados">
+<!ENTITY Ctr_autocompl_not	"Hide page title">
 <!ENTITY Ctr_autocompl_sep	"Exibir separador entre resultados">
 <!ENTITY Ctr_urlbar_uc		"Desativar recurso 'auto completar unificado'">
 <!ENTITY Ctr_lbsugresi		"Desativar limite de altura">
