--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -282,8 +282,8 @@
 <!ENTITY Ctr_autocompl_it	"'Mit ... suchen'- und 'Aufrufen'-Elemente entfernen (falls vorhanden)">
 <!ENTITY Ctr_autocompl_hl	"Hervorhebung von Texttreffern">
 <!ENTITY Ctr_autocompl_rhl	"Blaue 'Aero'-Farben für hervorgehobene Ergebnisse">
+<!ENTITY Ctr_autocompl_not	"Seitentitel verbergen">
 <!ENTITY Ctr_autocompl_sep	"Trennlinie zwischen den Ergebnissen anzeigen">
-<!ENTITY Ctr_autocompl_title	"Seiten-Titel verbergen">
 <!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren">
 <!ENTITY Ctr_lbsugresi		"Höhenlimit deaktivieren">
 <!ENTITY Ctr_cresultshcb	"Eigenes Höhenlimit setzen: ">
