--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocompl_it	"Zapiska 'Pytaś z...' a 'Woglědaś' wótpóraś (jolic eksistěrujotej)">
 <!ENTITY Ctr_autocompl_hl	"Wuzwignjenje tekstowych wótpowědnikow">
 <!ENTITY Ctr_autocompl_rhl	"Aero-barwy za wuzwignjone wuslědki">
+<!ENTITY Ctr_autocompl_not	"Hide page title">
 <!ENTITY Ctr_autocompl_sep	"Źěleńsku liniju mjazy wuslědkami pokazaś">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś">
 <!ENTITY Ctr_lbsugresi		"Limit wusokosći znjemóžniś">
