--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -282,6 +282,7 @@
 <!ENTITY Ctr_autocompl_it	"Eemalda kirjed 'Otsi otsingumootoriga...' ja 'Külasta' (kui on)">
 <!ENTITY Ctr_autocompl_hl	"Sisestatule vastava teksti esiletõstmine">
 <!ENTITY Ctr_autocompl_rhl	"Aero värvid esiletõstetud tulemuste tähistamiseks">
+<!ENTITY Ctr_autocompl_not	"Hide page title">
 <!ENTITY Ctr_autocompl_sep	"Näita tulemuste vahel eraldusjooni">
 <!ENTITY Ctr_urlbar_uc		"Keela ühtse automaatlõpetamise funktsioon 'unified autocomplete'">
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
