Updates to the Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s)">
 <!ENTITY Ctr_findbar		"Iskalna vrstica">
 <!ENTITY Ctr_findbar_hws	"Zapri iskalno vrstico ob pomikanju po strani">
-<!ENTITY Ctr_findbar_width	"Findboxes width">
+<!ENTITY Ctr_findbar_width	"Širina iskalnih polj">
 <!ENTITY Ctr_findbarpos		"Položaj iskalne vrstice">
 <!ENTITY Ctr_findbar_def	"Spodaj (privzeto)">
 <!ENTITY Ctr_findbar_top	"Zgoraj">
@@ -282,7 +282,7 @@
 <!ENTITY Ctr_autocompl_it	"Odstrani predmeta 'Išči s/z …' in 'Obišči' (če sta prisotna)">
 <!ENTITY Ctr_autocompl_hl	"Označevanje zadetkov">
 <!ENTITY Ctr_autocompl_rhl	"Barve Aero za poudarjene rezultate">
-<!ENTITY Ctr_autocompl_not	"Hide page title">
+<!ENTITY Ctr_autocompl_not	"Skrij naziv strani">
 <!ENTITY Ctr_autocompl_sep	"Prikaži ločilo med rezultati">
 <!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja'">
 <!ENTITY Ctr_lbsugresi		"Onemogoči omejitev višine">
