--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekund)">
 <!ENTITY Ctr_findbar		"Leidmisriba">
 <!ENTITY Ctr_findbar_hws	"Lehte kerides sulge leidmisriba">
-<!ENTITY Ctr_findbar_width	"Leidmisriba sisestuskasti laius">
+<!ENTITY Ctr_findbar_width	"Sisestuskasti laius">
 <!ENTITY Ctr_findbarpos		"Leidmisriba asukoht">
 <!ENTITY Ctr_findbar_def	"All (vaikimisi)">
 <!ENTITY Ctr_findbar_top	"Üleval">
