--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytańska rědka">
 <!ENTITY Ctr_findbar_hws	"Pytańsku rědku zacyniś, gaž bok se kula">
-<!ENTITY Ctr_findbar_width	"Findboxes width">
+<!ENTITY Ctr_findbar_width	"Findboxes width: ">
 <!ENTITY Ctr_findbarpos		"Pozicija pytańskeje rědki">
 <!ENTITY Ctr_findbar_def	"Dołojce (standard)">
 <!ENTITY Ctr_findbar_top	"Górjejce">
