--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s) de retard d'initialisation, au démarrage du navigateur">
 <!ENTITY Ctr_findbar		"Barre de recherche">
 <!ENTITY Ctr_findbar_hws	"Fermer la barre de recherche lors du défilement de la page">
-<!ENTITY Ctr_findbar_width	"Findboxes width">
+<!ENTITY Ctr_findbar_width	"Findboxes width: ">
 <!ENTITY Ctr_findbarpos		"Position de la barre de recherche :">
 <!ENTITY Ctr_findbar_def	"En bas (par défaut)">
 <!ENTITY Ctr_findbar_top	"En haut">
