--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"毫秒 (1000 毫秒 = 1 秒)">
 <!ENTITY Ctr_findbar		"查找栏">
 <!ENTITY Ctr_findbar_hws	"滚动页面时关闭查找栏">
-<!ENTITY Ctr_findbar_width	"Findboxes width">
+<!ENTITY Ctr_findbar_width	"Findboxes width: ">
 <!ENTITY Ctr_findbarpos		"查找栏位置">
 <!ENTITY Ctr_findbar_def	"底部(默认)">
 <!ENTITY Ctr_findbar_top	"顶部">
