--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekund)">
 <!ENTITY Ctr_findbar		"Findbar">
 <!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
-<!ENTITY Ctr_findbar_width	"Findboxes width">
+<!ENTITY Ctr_findbar_width	"Findboxes width: ">
 <!ENTITY Ctr_findbarpos		"Placering af søgelinje">
 <!ENTITY Ctr_findbar_def	"Bunden (standard)">
 <!ENTITY Ctr_findbar_top	"Toppen">
