--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 Sekunde)">
 <!ENTITY Ctr_findbar		"Suchleiste">
 <!ENTITY Ctr_findbar_hws	"Suchleiste schließen sobald auf der Seite navigiert wird">
-<!ENTITY Ctr_findbar_width	"Breite der Suchbox">
+<!ENTITY Ctr_findbar_width	"Breite der Suchbox: ">
 <!ENTITY Ctr_findbarpos		"Position der Suchleiste">
 <!ENTITY Ctr_findbar_def	"Unten (Standard)">
 <!ENTITY Ctr_findbar_top	"Oben">
