--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -152,8 +152,8 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Findbar">
 <!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
-<!ENTITY Ctr_findbar_width	"Findboxes width">
-<!ENTITY Ctr_findbarpos		"Findbar position">
+<!ENTITY Ctr_findbar_width	"Findboxes width: ">
+<!ENTITY Ctr_findbarpos		"Findbars position">
 <!ENTITY Ctr_findbar_def	"Bottom (default)">
 <!ENTITY Ctr_findbar_top	"Top">
 <!ENTITY Ctr_findbar_topa	"Top (alternative content order)">
