--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -152,7 +152,7 @@
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 seg)">
 <!ENTITY Ctr_findbar		"Barra de herramientas de búsqueda">
 <!ENTITY Ctr_findbar_hws	"Cerrar la barra de herramientas de búsqueda al desplazar la página">
-<!ENTITY Ctr_findbar_width	"Findboxes width">
+<!ENTITY Ctr_findbar_width	"Findboxes width: ">
 <!ENTITY Ctr_findbarpos		"Posición en la ventana de la barra de herramientas de búsqueda">
 <!ENTITY Ctr_findbar_def	"Abajo (predeterminada)">
 <!ENTITY Ctr_findbar_top	"Arriba">
