Brazilian Portuguese Translation Update

--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(clássica)">
 <!ENTITY Ctr_tabminheight	"Altura:">
 <!ENTITY Ctr_tabheightinfo	"Baixos valores causarão falhas no modo maximizado!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"Pré-visualizar abas usando 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Largura máxima:">
 <!ENTITY Ctr_tabminwidth	"Largura mínima:">
 <!ENTITY Ctr_tabwidthinfo	"Larguras mínimas e máximas são controladas pelo 'TabMixPlus'">
@@ -150,10 +150,10 @@
 <!ENTITY Ctr_navlargeicons	"Ícones grandes">
 <!ENTITY Ctr_nbisizedelay0	"Atraso (em msegs.) na execução">
 <!ENTITY Ctr_nbisizedelay	"msegs. (1000 msegs. = 1 seg.)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
-<!ENTITY Ctr_findbar_width	"Findboxes width: ">
-<!ENTITY Ctr_findbarpos		"Barra de pesquisas">
+<!ENTITY Ctr_findbar		"Barra de pesquisas">
+<!ENTITY Ctr_findbar_hws	"Fechar barra de pesquisas ao rolar pela página">
+<!ENTITY Ctr_findbar_width	"Largura das caixas de pesquisa: ">
+<!ENTITY Ctr_findbarpos		"Posição das barras de pesquisa">
 <!ENTITY Ctr_findbar_def	"Posição padrão">
 <!ENTITY Ctr_findbar_top	"Posição no topo">
 <!ENTITY Ctr_findbar_topa	"Posição no topo - alternativa">
@@ -179,7 +179,7 @@
 <!ENTITY Ctr_osearch_dm		"Marcador pequeno">
 <!ENTITY Ctr_addonmanager	"Gerenciador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'Mais informações': ordem alternativa">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"Sempre exibir categoria 'Atualizações recentes'">
 <!ENTITY Ctr_alt_addonsm	"Aparência alternativa">
 <!ENTITY Ctr_am_nowarning	"Lista de complementos: ocultar avisos">
 <!ENTITY Ctr_am_compact		"Lista de complementos: visualização compacta">
@@ -193,7 +193,7 @@
 <!ENTITY Ctr_hiderecentbm	"Popup de favoritos: ocultar favoritos adicionados recentemente">
 <!ENTITY Ctr_hideeditbm		"Estrela de favoritos: ocultar popup (se a página não está nos favoritos)">
 <!ENTITY Ctr_oldplacesbut	"Itens e pastas de favoritos na barra de ferramentas: aparência antiga">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_dl_pm_drop		"Painel dos botões de download: exibir marcador de lista">
 <!ENTITY Ctr_bmbutpanelm	"Popup: aparência do menu do painel">
 <!ENTITY Ctr_bmbunsortbm	"Popup: menu 'outros favoritos'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu acima dos favoritos">
@@ -243,7 +243,7 @@
 <!ENTITY Ctr_italic			"Itálico">
 <!ENTITY Ctr_underlined		"Sublinhado">
 <!ENTITY Ctr_notabhov		"As configurações habilitadas substituirão as configurações 'flutuantes'">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"Reduzir visibilidade da aba">
 <!ENTITY Ctr_tabc_act_tb	"Cor de fundo nas barras de ferramentas">
 
 <!ENTITY Ctr_urlbar			"Barra de URLs">
@@ -282,7 +282,7 @@
 <!ENTITY Ctr_autocompl_it	"Remover itens 'Pesquisar com...' e 'Visitar' itens (se presente)">
 <!ENTITY Ctr_autocompl_hl	"Realçar ocorrências do texto">
 <!ENTITY Ctr_autocompl_rhl	"Cores Aero para resultados realçados">
-<!ENTITY Ctr_autocompl_not	"Hide page title">
+<!ENTITY Ctr_autocompl_not	"Ocultar título da página">
 <!ENTITY Ctr_autocompl_sep	"Exibir separador entre resultados">
 <!ENTITY Ctr_urlbar_uc		"Desativar recurso 'auto completar unificado'">
 <!ENTITY Ctr_lbsugresi		"Desativar limite de altura">
@@ -341,7 +341,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Todas as barras de ferramentas em 'Beyond australis' no slim chrome dos complementos, são afetadas.">
 <!ENTITY Ctr_nonavborder	"Barra de favoritos: adicionar borda no topo da barra">
 <!ENTITY Ctr_nonavtbborder	"Barras superiores: remover bordas da barra">
-<!ENTITY Ctr_toptb_oldpad	"Top toolbars: old left and right padding">
+<!ENTITY Ctr_toptb_oldpad	"Barras de ferramentas superiores: antigo preenchimento esquerdo e direito">
 <!ENTITY Ctr_hidesbclose	"Barras laterais: ocultar o botão fechar da barra lateral">
 <!ENTITY Ctr_notextshadow	"Barras de ferramentas: ocultar sombra para texto da barra e da aba">
 <!ENTITY Ctr_chevronfix		"Barra de ferramentas navegação: ocultar a seta dupla ('Mais ferramentas') no final das barras de ferramentas">
